[package]
name = "fluid-sim-2d"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6.2"
winit = "0.24.0"
tokio = { version = "1.1.0", features = ["rt", "rt-multi-thread", "net", "process"] }
glam = "0.12.0"
futures = "0.3.12"
vk-shader-macros = "0.2.6"
