[package]
name = "fluid-sim-2d"
version = "0.1.0"
authors = ["evopen <520dhh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.7.0"
winit = "0.24.0"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "net", "process"] }
glam = { version = "0.13.0", features = ["bytemuck"] }
futures = "0.3.13"
bytemuck = { version = "1.5.1", features = ["derive"] }
rayon = "1.5.0"
once_cell = "1.7.2"

[build-dependencies]
shaderc = "0.7.2"
glob = "0.3.0"
anyhow = "1.0.39"
rayon = "1.5.0"
